antlr_generated/MxParser.py
# Generated from MxParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MxParser ( Parser ):

    grammarFileName = "MxParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'this'", "'null'", "'true'", 
                     "'false'", "'new'", "'class'", "'else if'", "'if'", 
                     "'else'", "'for'", "'while'", "'break'", "'continue'", 
                     "'return'", "'++'", "'--'", "'!'", "'~'", "'+'", "'-'", 
                     "'.'", "'*'", "'/'", "'%'", "'>>'", "'<<'", "'<='", 
                     "'>='", "'<'", "'>'", "'=='", "'!='", "'&'", "'^'", 
                     "'|'", "'&&'", "'||'", "'='", "'?'", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "Comment_Multi", "Comment_Single", "NewLine", 
                      "Blank", "BasicTypes", "This", "Null", "True_", "False_", 
                      "New", "Class", "Else_if", "If", "Else", "For", "While", 
                      "Break", "Continue", "Return", "Increment", "Decrement", 
                      "Logic_Not", "Bit_Inv", "Add", "Sub", "Dot", "Mul", 
                      "Div", "Mod", "Shift_Right", "Shift_Left_", "Cmp_le", 
                      "Cmp_ge", "Cmp_lt", "Cmp_gt", "Cmp_eq", "Cmp_ne", 
                      "Bit_And", "Bit_Xor", "Bit_Or_", "Logic_And", "Logic_Or_", 
                      "Assign", "Quest", "Colon", "FStringHead", "FStringMid", 
                      "FStringTail", "FStringAtom", "Cstring", "Paren_Left_", 
                      "Paren_Right", "Brack_Left_", "Brack_Right", "Brace_Left_", 
                      "Brace_Right", "Comma", "Semi_Colon", "Number", "Identifier" ]

    RULE_file_Input = 0
    RULE_function_Definition = 1
    RULE_function_Param_List = 2
    RULE_function_Argument = 3
    RULE_class_Definition = 4
    RULE_class_Ctor_Function = 5
    RULE_stmt = 6
    RULE_block_Stmt = 7
    RULE_simple_Stmt = 8
    RULE_suite = 9
    RULE_branch_Stmt = 10
    RULE_if_Stmt = 11
    RULE_else_if_Stmt = 12
    RULE_else_Stmt = 13
    RULE_loop_Stmt = 14
    RULE_for_Stmt = 15
    RULE_while_Stmt = 16
    RULE_flow_Stmt = 17
    RULE_variable_Definition = 18
    RULE_init_Stmt = 19
    RULE_expr_List = 20
    RULE_expression = 21
    RULE_f_string = 22
    RULE_typename = 23
    RULE_new_Type = 24
    RULE_new_Index = 25
    RULE_array_Literal = 26
    RULE_array_Literal_List = 27
    RULE_literal_List = 28
    RULE_literal_Constant = 29

    ruleNames =  [ "file_Input", "function_Definition", "function_Param_List", 
                   "function_Argument", "class_Definition", "class_Ctor_Function", 
                   "stmt", "block_Stmt", "simple_Stmt", "suite", "branch_Stmt", 
                   "if_Stmt", "else_if_Stmt", "else_Stmt", "loop_Stmt", 
                   "for_Stmt", "while_Stmt", "flow_Stmt", "variable_Definition", 
                   "init_Stmt", "expr_List", "expression", "f_string", "typename", 
                   "new_Type", "new_Index", "array_Literal", "array_Literal_List", 
                   "literal_List", "literal_Constant" ]

    EOF = Token.EOF
    Comment_Multi=1
    Comment_Single=2
    NewLine=3
    Blank=4
    BasicTypes=5
    This=6
    Null=7
    True_=8
    False_=9
    New=10
    Class=11
    Else_if=12
    If=13
    Else=14
    For=15
    While=16
    Break=17
    Continue=18
    Return=19
    Increment=20
    Decrement=21
    Logic_Not=22
    Bit_Inv=23
    Add=24
    Sub=25
    Dot=26
    Mul=27
    Div=28
    Mod=29
    Shift_Right=30
    Shift_Left_=31
    Cmp_le=32
    Cmp_ge=33
    Cmp_lt=34
    Cmp_gt=35
    Cmp_eq=36
    Cmp_ne=37
    Bit_And=38
    Bit_Xor=39
    Bit_Or_=40
    Logic_And=41
    Logic_Or_=42
    Assign=43
    Quest=44
    Colon=45
    FStringHead=46
    FStringMid=47
    FStringTail=48
    FStringAtom=49
    Cstring=50
    Paren_Left_=51
    Paren_Right=52
    Brack_Left_=53
    Brack_Right=54
    Brace_Left_=55
    Brace_Right=56
    Comma=57
    Semi_Colon=58
    Number=59
    Identifier=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MxParser.EOF, 0)

        def function_Definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Function_DefinitionContext)
            else:
                return self.getTypedRuleContext(MxParser.Function_DefinitionContext,i)


        def class_Definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Class_DefinitionContext)
            else:
                return self.getTypedRuleContext(MxParser.Class_DefinitionContext,i)


        def variable_Definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Variable_DefinitionContext)
            else:
                return self.getTypedRuleContext(MxParser.Variable_DefinitionContext,i)


        def Semi_Colon(self, i:int=None):
            if i is None:
                return self.getTokens(MxParser.Semi_Colon)
            else:
                return self.getToken(MxParser.Semi_Colon, i)

        def getRuleIndex(self):
            return MxParser.RULE_file_Input

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_Input" ):
                return visitor.visitFile_Input(self)
            else:
                return visitor.visitChildren(self)




    def file_Input(self):

        localctx = MxParser.File_InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_Input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1441151880758560800) != 0):
                self.state = 64
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 60
                    self.function_Definition()
                    pass

                elif la_ == 2:
                    self.state = 61
                    self.class_Definition()
                    pass

                elif la_ == 3:
                    self.state = 62
                    self.variable_Definition()
                    pass

                elif la_ == 4:
                    self.state = 63
                    self.match(MxParser.Semi_Colon)
                    pass


                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(MxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_Argument(self):
            return self.getTypedRuleContext(MxParser.Function_ArgumentContext,0)


        def Paren_Left_(self):
            return self.getToken(MxParser.Paren_Left_, 0)

        def Paren_Right(self):
            return self.getToken(MxParser.Paren_Right, 0)

        def block_Stmt(self):
            return self.getTypedRuleContext(MxParser.Block_StmtContext,0)


        def function_Param_List(self):
            return self.getTypedRuleContext(MxParser.Function_Param_ListContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_function_Definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_Definition" ):
                return visitor.visitFunction_Definition(self)
            else:
                return visitor.visitChildren(self)




    def function_Definition(self):

        localctx = MxParser.Function_DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_Definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.function_Argument()
            self.state = 72
            self.match(MxParser.Paren_Left_)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5 or _la==60:
                self.state = 73
                self.function_Param_List()


            self.state = 76
            self.match(MxParser.Paren_Right)
            self.state = 77
            self.block_Stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_Param_ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_Argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Function_ArgumentContext)
            else:
                return self.getTypedRuleContext(MxParser.Function_ArgumentContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MxParser.Comma)
            else:
                return self.getToken(MxParser.Comma, i)

        def getRuleIndex(self):
            return MxParser.RULE_function_Param_List

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_Param_List" ):
                return visitor.visitFunction_Param_List(self)
            else:
                return visitor.visitChildren(self)




    def function_Param_List(self):

        localctx = MxParser.Function_Param_ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_Param_List)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.function_Argument()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 80
                self.match(MxParser.Comma)
                self.state = 81
                self.function_Argument()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typename(self):
            return self.getTypedRuleContext(MxParser.TypenameContext,0)


        def Identifier(self):
            return self.getToken(MxParser.Identifier, 0)

        def getRuleIndex(self):
            return MxParser.RULE_function_Argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_Argument" ):
                return visitor.visitFunction_Argument(self)
            else:
                return visitor.visitChildren(self)




    def function_Argument(self):

        localctx = MxParser.Function_ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_Argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.typename()
            self.state = 88
            self.match(MxParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(MxParser.Class, 0)

        def Identifier(self):
            return self.getToken(MxParser.Identifier, 0)

        def Brace_Left_(self):
            return self.getToken(MxParser.Brace_Left_, 0)

        def Brace_Right(self):
            return self.getToken(MxParser.Brace_Right, 0)

        def Semi_Colon(self):
            return self.getToken(MxParser.Semi_Colon, 0)

        def variable_Definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Variable_DefinitionContext)
            else:
                return self.getTypedRuleContext(MxParser.Variable_DefinitionContext,i)


        def function_Definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Function_DefinitionContext)
            else:
                return self.getTypedRuleContext(MxParser.Function_DefinitionContext,i)


        def class_Ctor_Function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Class_Ctor_FunctionContext)
            else:
                return self.getTypedRuleContext(MxParser.Class_Ctor_FunctionContext,i)


        def getRuleIndex(self):
            return MxParser.RULE_class_Definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_Definition" ):
                return visitor.visitClass_Definition(self)
            else:
                return visitor.visitChildren(self)




    def class_Definition(self):

        localctx = MxParser.Class_DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_Definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MxParser.Class)
            self.state = 91
            self.match(MxParser.Identifier)
            self.state = 92
            self.match(MxParser.Brace_Left_)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==60:
                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 93
                    self.variable_Definition()
                    pass

                elif la_ == 2:
                    self.state = 94
                    self.function_Definition()
                    pass

                elif la_ == 3:
                    self.state = 95
                    self.class_Ctor_Function()
                    pass


                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(MxParser.Brace_Right)
            self.state = 102
            self.match(MxParser.Semi_Colon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_Ctor_FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MxParser.Identifier, 0)

        def Paren_Left_(self):
            return self.getToken(MxParser.Paren_Left_, 0)

        def Paren_Right(self):
            return self.getToken(MxParser.Paren_Right, 0)

        def block_Stmt(self):
            return self.getTypedRuleContext(MxParser.Block_StmtContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_class_Ctor_Function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_Ctor_Function" ):
                return visitor.visitClass_Ctor_Function(self)
            else:
                return visitor.visitChildren(self)




    def class_Ctor_Function(self):

        localctx = MxParser.Class_Ctor_FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_Ctor_Function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MxParser.Identifier)
            self.state = 105
            self.match(MxParser.Paren_Left_)
            self.state = 106
            self.match(MxParser.Paren_Right)
            self.state = 107
            self.block_Stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_Stmt(self):
            return self.getTypedRuleContext(MxParser.Simple_StmtContext,0)


        def branch_Stmt(self):
            return self.getTypedRuleContext(MxParser.Branch_StmtContext,0)


        def loop_Stmt(self):
            return self.getTypedRuleContext(MxParser.Loop_StmtContext,0)


        def flow_Stmt(self):
            return self.getTypedRuleContext(MxParser.Flow_StmtContext,0)


        def variable_Definition(self):
            return self.getTypedRuleContext(MxParser.Variable_DefinitionContext,0)


        def block_Stmt(self):
            return self.getTypedRuleContext(MxParser.Block_StmtContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MxParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.simple_Stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.branch_Stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.loop_Stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.flow_Stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.variable_Definition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.block_Stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Brace_Left_(self):
            return self.getToken(MxParser.Brace_Left_, 0)

        def Brace_Right(self):
            return self.getToken(MxParser.Brace_Right, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.StmtContext)
            else:
                return self.getTypedRuleContext(MxParser.StmtContext,i)


        def getRuleIndex(self):
            return MxParser.RULE_block_Stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_Stmt" ):
                return visitor.visitBlock_Stmt(self)
            else:
                return visitor.visitChildren(self)




    def block_Stmt(self):

        localctx = MxParser.Block_StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block_Stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MxParser.Brace_Left_)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2057652448566159328) != 0):
                self.state = 118
                self.stmt()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(MxParser.Brace_Right)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Semi_Colon(self):
            return self.getToken(MxParser.Semi_Colon, 0)

        def expression(self):
            return self.getTypedRuleContext(MxParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_simple_Stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_Stmt" ):
                return visitor.visitSimple_Stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_Stmt(self):

        localctx = MxParser.Simple_StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_simple_Stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1733393275394459584) != 0):
                self.state = 126
                self.expression(0)


            self.state = 129
            self.match(MxParser.Semi_Colon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_Stmt(self):
            return self.getTypedRuleContext(MxParser.Block_StmtContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MxParser.StmtContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_suite

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuite" ):
                return visitor.visitSuite(self)
            else:
                return visitor.visitChildren(self)




    def suite(self):

        localctx = MxParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_suite)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.block_Stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Branch_StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_Stmt(self):
            return self.getTypedRuleContext(MxParser.If_StmtContext,0)


        def else_if_Stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MxParser.Else_if_StmtContext)
            else:
                return self.getTypedRuleContext(MxParser.Else_if_StmtContext,i)


        def else_Stmt(self):
            return self.getTypedRuleContext(MxParser.Else_StmtContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_branch_Stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBranch_Stmt" ):
                return visitor.visitBranch_Stmt(self)
            else:
                return visitor.visitChildren(self)




    def branch_Stmt(self):

        localctx = MxParser.Branch_StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_branch_Stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.if_Stmt()
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 136
                    self.else_if_Stmt() 
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 142
                self.else_Stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def If(self):
            return self.getToken(MxParser.If, 0)

        def Paren_Left_(self):
            return self.getToken(MxParser.Paren_Left_, 0)

        def expression(self):
            return self.getTypedRuleContext(MxParser.ExpressionContext,0)


        def Paren_Right(self):
            return self.getToken(MxParser.Paren_Right, 0)

        def suite(self):
            return self.getTypedRuleContext(MxParser.SuiteContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_if_Stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_Stmt" ):
                return visitor.visitIf_Stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_Stmt(self):

        localctx = MxParser.If_StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_Stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MxParser.If)
            self.state = 146
            self.match(MxParser.Paren_Left_)
            self.state = 147
            self.expression(0)
            self.state = 148
            self.match(MxParser.Paren_Right)
            self.state = 149
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_if_StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Else_if(self):
            return self.getToken(MxParser.Else_if, 0)

        def Paren_Left_(self):
            return self.getToken(MxParser.Paren_Left_, 0)

        def expression(self):
            return self.getTypedRuleContext(MxParser.ExpressionContext,0)


        def Paren_Right(self):
            return self.getToken(MxParser.Paren_Right, 0)

        def suite(self):
            return self.getTypedRuleContext(MxParser.SuiteContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_else_if_Stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_if_Stmt" ):
                return visitor.visitElse_if_Stmt(self)
            else:
                return visitor.visitChildren(self)




    def else_if_Stmt(self):

        localctx = MxParser.Else_if_StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_else_if_Stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MxParser.Else_if)
            self.state = 152
            self.match(MxParser.Paren_Left_)
            self.state = 153
            self.expression(0)
            self.state = 154
            self.match(MxParser.Paren_Right)
            self.state = 155
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Else(self):
            return self.getToken(MxParser.Else, 0)

        def suite(self):
            return self.getTypedRuleContext(MxParser.SuiteContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_else_Stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_Stmt" ):
                return visitor.visitElse_Stmt(self)
            else:
                return visitor.visitChildren(self)




    def else_Stmt(self):

        localctx = MxParser.Else_StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_else_Stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MxParser.Else)
            self.state = 158
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def for_Stmt(self):
            return self.getTypedRuleContext(MxParser.For_StmtContext,0)


        def while_Stmt(self):
            return self.getTypedRuleContext(MxParser.While_StmtContext,0)


        def getRuleIndex(self):
            return MxParser.RULE_loop_Stmt
